<resources>
    <string name="app_name">SOPR</string>

    <string name="connected_to">Connected to: %1$s</string>
    <string name="disconnected">Disconnected</string>
    <string name="btn_connect">Connect to SOPR</string>
    <string name="btn_disconnect">Disconnect from SOPR</string>
    <string name="youNeedToConnect">You need to connect first!</string>
    <string name="we_need_bt">This app needs Bluetooth for it\'s core functionality!</string>
    <string name="conn_timeout">Connection timed out</string>
    <string name="closeDialog">Close</string>
    <string name="connectingTo">Connecting to %1$s</string>
    <string name="connecting">Connecting…</string>
    <string name="couldNotConnect">Could not connect to %1$s</string>

    <string name="gps_title">Enable GPS</string>
    <string name="gps_content">GPS is required for this app. Please enable GPS.</string>
    <string name="gps_openSettings">Settings</string>

    <string name="solar_voltage">Solar: %1$s V</string>
    <string name="source_voltage">Source: %1$s V</string>
    <string name="battery_voltage">Battery: %1$s V</string>
    <string name="output_status">Output</string>
    <string name="failure_status">Failure</string>

    <string name="battery_charger">Battery charged by: <b>%1$s</b></string>
    <string name="last_update">Last updated: <b>%1$s</b></string>
    <string name="runtime">Runtime: <b>%1$d</b>d <b>%2$d</b>h <b>%3$d</b>m <b>%4$d</b>s</string>
    <string name="battery_temperature">Battery temperature: <b>%1$s °C</b></string>

    <string name="graph_solar">Solar</string>
    <string name="graph_source">Source</string>
    <string name="graph_battery">Battery</string>

    <string name="settings_text">Settings</string>
    <string name="settings_btnBack">Back</string>
    <string name="settings_update_rate">Update rate (s): </string>
    <string name="settings_bt_channel">Bluetooth Channel: </string>
    <string name="settings_btn_save">Save settings</string>
    <string name="settings_saved">Saved.</string>
    <string name="settings_enable_autoconnect">Remember last device and try to autoconnect: </string>
    <string name="settings_cantBeLessThan">Value %1$s can\'t be less than %2$d</string>


    <string name="fw_version">Firmware version %1$s       pihrt.com</string>
    <string name="footer_text" translatable="false">pihrt.com</string>

</resources>